--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="card" style="width: 60%">
+      <div class="card">
         <div class="card-body">
           <img
             src="./assets/images/image-omelette.jpeg"
@@ -36,8 +36,8 @@
           An easy and quick dish, perfect for any meal. This classic omelette
           combines beaten eggs cooked to perfection, optionally filled with your
           choice of cheese, vegetables, or meats.
-          <div>
-            Preparation time
+          <div class="preparation-time">
+            <h2>Preparation time</h2>
             <ul>
               <li>Total: Approximately 10 minutes</li>
               <li>Preparation: 5 minutes</li>
@@ -54,40 +54,50 @@
               Optional fillings: cheese, diced vegetables, cooked meats, herbs
             </li>
           </ul>
-
-          <h2>Instructions</h2>
-          <ol>
-            <li>
-              Beat the eggs: In a bowl, beat the eggs with a pinch of salt and
-              pepper until they are well mixed. You can add a tablespoon of
-              water or milk for a fluffier texture.
-            </li>
-            <li>
-              Heat the pan: Place a non-stick frying pan over medium heat and
-              add butter or oil.
-            </li>
-            <li>
-              Cook the omelette: Once the butter is melted and bubbling, pour in
-              the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
-            </li>
-            <li>
-              Add fillings (optional): When the eggs begin to set at the edges
-              but are still slightly runny in the middle, sprinkle your chosen
-              fillings over one half of the omelette.
-            </li>
-            <li>
-              Fold and serve: As the omelette continues to cook, carefully lift
-              one edge and fold it over the fillings. Let it cook for another
-              minute, then slide it onto a plate.
-            </li>
-            <li>
-              Enjoy: Serve hot, with additional salt and pepper if needed.
-            </li>
-          </ol>
-
+          <hr />
+          <div class="instructions">
+            <h2>Instructions</h2>
+            <ol>
+              <li>
+                Beat the eggs: In a bowl, beat the eggs with a pinch of salt and
+                pepper until they are well mixed. You can add a tablespoon of
+                water or milk for a fluffier texture.
+              </li>
+              <li>
+                Heat the pan: Place a non-stick frying pan over medium heat and
+                add butter or oil.
+              </li>
+              <li>
+                Cook the omelette: Once the butter is melted and bubbling, pour
+                in the eggs. Tilt the pan to ensure the eggs evenly coat the
+                surface.
+              </li>
+              <li>
+                Add fillings (optional): When the eggs begin to set at the edges
+                but are still slightly runny in the middle, sprinkle your chosen
+                fillings over one half of the omelette.
+              </li>
+              <li>
+                Fold and serve: As the omelette continues to cook, carefully
+                lift one edge and fold it over the fillings. Let it cook for
+                another minute, then slide it onto a plate.
+              </li>
+              <li>
+                Enjoy: Serve hot, with additional salt and pepper if needed.
+              </li>
+            </ol>
+          </div>
+          <hr />
           <h2>Nutrition</h2>
           The table below shows nutritional values per serving without the
-          additional fillings. Calories 277kcal Carbs 0g Protein 20g Fat 22g
+          additional fillings.<br />
+          Calories 277kcal
+          <hr />
+          Carbs 0g
+          <hr />
+          Protein 20g
+          <hr />
+          Fat 22g
 
           <div class="attribution">
             Challenge by
