--- a/index.html
+++ b/index.html
@@ -26,88 +26,117 @@
   </head>
   <body>
     <div class="container">
-      <div class="card">
-        <div class="card-body">
-          <img
-            src="./assets/images/image-omelette.jpeg"
-            alt="an egg omelette"
-          />
-          <h1>Simple Omelette Recipe</h1>
-          An easy and quick dish, perfect for any meal. This classic omelette
-          combines beaten eggs cooked to perfection, optionally filled with your
-          choice of cheese, vegetables, or meats.
-          <div class="preparation-time">
-            <h2>Preparation time</h2>
-            <ul>
-              <li>Total: Approximately 10 minutes</li>
-              <li>Preparation: 5 minutes</li>
-              <li>Cooking: 5minutes</li>
-            </ul>
-          </div>
-          <h2>Ingredients</h2>
-          <ul>
-            <li>2-3 large eggs</li>
-            <li>Salt, to taste</li>
-            <li>Pepper, to taste</li>
-            <li>1 tablespoon of butteror oil</li>
-            <li>
-              Optional fillings: cheese, diced vegetables, cooked meats, herbs
-            </li>
-          </ul>
-          <hr />
-          <div class="instructions">
-            <h2>Instructions</h2>
-            <ol>
-              <li>
-                Beat the eggs: In a bowl, beat the eggs with a pinch of salt and
-                pepper until they are well mixed. You can add a tablespoon of
-                water or milk for a fluffier texture.
-              </li>
-              <li>
-                Heat the pan: Place a non-stick frying pan over medium heat and
-                add butter or oil.
-              </li>
-              <li>
-                Cook the omelette: Once the butter is melted and bubbling, pour
-                in the eggs. Tilt the pan to ensure the eggs evenly coat the
-                surface.
-              </li>
-              <li>
-                Add fillings (optional): When the eggs begin to set at the edges
-                but are still slightly runny in the middle, sprinkle your chosen
-                fillings over one half of the omelette.
-              </li>
-              <li>
-                Fold and serve: As the omelette continues to cook, carefully
-                lift one edge and fold it over the fillings. Let it cook for
-                another minute, then slide it onto a plate.
-              </li>
-              <li>
-                Enjoy: Serve hot, with additional salt and pepper if needed.
-              </li>
-            </ol>
-          </div>
-          <hr />
-          <h2>Nutrition</h2>
-          The table below shows nutritional values per serving without the
-          additional fillings.<br />
-          Calories 277kcal
-          <hr />
-          Carbs 0g
-          <hr />
-          Protein 20g
-          <hr />
-          Fat 22g
+      <div class="row">
+        <div class="col-sm-12 col-auto">
+          <div class="card">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-12">
+                  <img
+                    src="./assets/images/image-omelette.jpeg"
+                    alt="an egg omelette"
+                  />
+                </div>
+              </div>
 
-          <div class="attribution">
-            Challenge by
-            <a
-              href="https://www.frontendmentor.io?ref=challenge"
-              target="_blank"
-              >Frontend Mentor</a
-            >. Coded by
-            <a href="https://focused-joliot-da009a.netlify.app/">Ranem Haffar</a
-            >.
+              <h1>Simple Omelette Recipe</h1>
+              An easy and quick dish, perfect for any meal. This classic
+              omelette combines beaten eggs cooked to perfection, optionally
+              filled with your choice of cheese, vegetables, or meats.
+              <div class="preparation-time">
+                <h2>Preparation time</h2>
+                <ul>
+                  <li><strong>Total:</strong> Approximately 10 minutes</li>
+                  <li><strong>Preparation:</strong> 5 minutes</li>
+                  <li><strong>Cooking:</strong> 5minutes</li>
+                </ul>
+              </div>
+              <h2>Ingredients</h2>
+              <ul>
+                <li>2-3 large eggs</li>
+                <li>Salt, to taste</li>
+                <li>Pepper, to taste</li>
+                <li>1 tablespoon of butteror oil</li>
+                <li>
+                  Optional fillings: cheese, diced vegetables, cooked meats,
+                  herbs
+                </li>
+              </ul>
+              <hr />
+              <div class="instructions">
+                <h2>Instructions</h2>
+                <ol>
+                  <li>
+                    Beat the eggs: In a bowl, beat the eggs with a pinch of salt
+                    and pepper until they are well mixed. You can add a
+                    tablespoon of water or milk for a fluffier texture.
+                  </li>
+                  <li>
+                    Heat the pan: Place a non-stick frying pan over medium heat
+                    and add butter or oil.
+                  </li>
+                  <li>
+                    Cook the omelette: Once the butter is melted and bubbling,
+                    pour in the eggs. Tilt the pan to ensure the eggs evenly
+                    coat the surface.
+                  </li>
+                  <li>
+                    Add fillings (optional): When the eggs begin to set at the
+                    edges but are still slightly runny in the middle, sprinkle
+                    your chosen fillings over one half of the omelette.
+                  </li>
+                  <li>
+                    Fold and serve: As the omelette continues to cook, carefully
+                    lift one edge and fold it over the fillings. Let it cook for
+                    another minute, then slide it onto a plate.
+                  </li>
+                  <li>
+                    Enjoy: Serve hot, with additional salt and pepper if needed.
+                  </li>
+                </ol>
+              </div>
+              <hr />
+              <h2>Nutrition</h2>
+              The table below shows nutritional values per serving without the
+              additional fillings.<br />
+              <div class="nutritions">
+                <div class="row">
+                  <div class="col-6">Calories</div>
+                  <div class="col-6">
+                    <span class="amount">277kcal</span>
+                  </div>
+                </div>
+
+                <hr />
+                <div class="row">
+                  <div class="col-6">Carbs</div>
+                  <div class="col-6"><span class="amount">0g</span></div>
+                </div>
+
+                <hr />
+                <div class="row">
+                  <div class="col-6">Protein</div>
+                  <div class="col-6"><span class="amount">20g</span></div>
+                </div>
+
+                <hr />
+                <div class="row">
+                  <div class="col-6">Fat</div>
+                  <div class="col-6"><span class="amount">22g</span></div>
+                </div>
+              </div>
+              <div class="attribution">
+                Challenge by
+                <a
+                  href="https://www.frontendmentor.io?ref=challenge"
+                  target="_blank"
+                  >Frontend Mentor</a
+                >. Coded by
+                <a href="https://focused-joliot-da009a.netlify.app/"
+                  >Ranem Haffar</a
+                >.
+              </div>
+            </div>
           </div>
         </div>
       </div>
