--- a/index.html
+++ b/index.html
@@ -29,16 +29,15 @@
       <div class="row">
         <div class="col-sm-12 col-auto">
           <div class="card">
-            <div class="card-body">
-              <div class="row">
-                <div class="col-12">
-                  <img
-                    src="./assets/images/image-omelette.jpeg"
-                    alt="an egg omelette"
-                  />
-                </div>
-              </div>
+            <div class="card-head">
+              <img
+                class="card-img-top"
+                src="./assets/images/image-omelette.jpeg"
+                alt="an egg omelette"
+              />
+            </div>
 
+            <div class="card-body">
               <h1>Simple Omelette Recipe</h1>
               An easy and quick dish, perfect for any meal. This classic
               omelette combines beaten eggs cooked to perfection, optionally
@@ -51,56 +50,63 @@
                   <li><strong>Cooking:</strong> 5minutes</li>
                 </ul>
               </div>
-              <h2>Ingredients</h2>
-              <ul>
-                <li>2-3 large eggs</li>
-                <li>Salt, to taste</li>
-                <li>Pepper, to taste</li>
-                <li>1 tablespoon of butteror oil</li>
-                <li>
-                  Optional fillings: cheese, diced vegetables, cooked meats,
-                  herbs
-                </li>
-              </ul>
+              <div class="ingredients">
+                <h2 class="pt-3 pb-3">Ingredients</h2>
+                <ul class="pb-3">
+                  <li>2-3 large eggs</li>
+                  <li>Salt, to taste</li>
+                  <li>Pepper, to taste</li>
+                  <li>1 tablespoon of butteror oil</li>
+                  <li>
+                    Optional fillings: cheese, diced vegetables, cooked meats,
+                    herbs
+                  </li>
+                </ul>
+              </div>
+
               <hr />
-              <div class="instructions">
-                <h2>Instructions</h2>
-                <ol>
+              <div class="instructions pt-3">
+                <h2 class="pb-3">Instructions</h2>
+                <ol class="pb-3">
                   <li>
-                    Beat the eggs: In a bowl, beat the eggs with a pinch of salt
-                    and pepper until they are well mixed. You can add a
-                    tablespoon of water or milk for a fluffier texture.
+                    <strong>Beat the eggs:</strong> In a bowl, beat the eggs
+                    with a pinch of salt and pepper until they are well mixed.
+                    You can add a tablespoon of water or milk for a fluffier
+                    texture.
                   </li>
                   <li>
-                    Heat the pan: Place a non-stick frying pan over medium heat
-                    and add butter or oil.
+                    <strong>Heat the pan:</strong> Place a non-stick frying pan
+                    over medium heat and add butter or oil.
                   </li>
                   <li>
-                    Cook the omelette: Once the butter is melted and bubbling,
-                    pour in the eggs. Tilt the pan to ensure the eggs evenly
-                    coat the surface.
+                    <strong>Cook the omelette:</strong> Once the butter is
+                    melted and bubbling, pour in the eggs. Tilt the pan to
+                    ensure the eggs evenly coat the surface.
                   </li>
                   <li>
-                    Add fillings (optional): When the eggs begin to set at the
-                    edges but are still slightly runny in the middle, sprinkle
-                    your chosen fillings over one half of the omelette.
+                    <strong>Add fillings (optional):</strong> When the eggs
+                    begin to set at the edges but are still slightly runny in
+                    the middle, sprinkle your chosen fillings over one half of
+                    the omelette.
                   </li>
                   <li>
-                    Fold and serve: As the omelette continues to cook, carefully
-                    lift one edge and fold it over the fillings. Let it cook for
-                    another minute, then slide it onto a plate.
+                    <strong>Fold and serve:</strong> As the omelette continues
+                    to cook, carefully lift one edge and fold it over the
+                    fillings. Let it cook for another minute, then slide it onto
+                    a plate.
                   </li>
                   <li>
-                    Enjoy: Serve hot, with additional salt and pepper if needed.
+                    <strong>Enjoy:</strong> Serve hot, with additional salt and
+                    pepper if needed.
                   </li>
                 </ol>
               </div>
               <hr />
-              <h2>Nutrition</h2>
+              <h2 class="pt-3 pb-3">Nutrition</h2>
               The table below shows nutritional values per serving without the
               additional fillings.<br />
               <div class="nutritions">
-                <div class="row">
+                <div class="row ps-4">
                   <div class="col-6">Calories</div>
                   <div class="col-6">
                     <span class="amount">277kcal</span>
@@ -108,19 +114,19 @@
                 </div>
 
                 <hr />
-                <div class="row">
+                <div class="row ps-4">
                   <div class="col-6">Carbs</div>
                   <div class="col-6"><span class="amount">0g</span></div>
                 </div>
 
                 <hr />
-                <div class="row">
+                <div class="row ps-4">
                   <div class="col-6">Protein</div>
                   <div class="col-6"><span class="amount">20g</span></div>
                 </div>
 
                 <hr />
-                <div class="row">
+                <div class="row ps-4">
                   <div class="col-6">Fat</div>
                   <div class="col-6"><span class="amount">22g</span></div>
                 </div>
